--- a/support.html
+++ b/support.html
@@ -95,7 +95,7 @@
 
     <div class="faq-item">
         <div class="faq-question">How do I restore my purchases?</div>
-        <p>If you reinstall the app or switch devices, tap "Restore Purchases" on the paywall screen or in Settings to restore your subscription.</p>
+        <p>If you reinstall the app or switch devices, tap "Restore Purchases" in Settings to restore your subscription.</p>
     </div>
 
     <div class="faq-item">
