--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
         <p><strong>Privacy Policy</strong></p>
     </div>
 
-    <p><strong>Last Updated:</strong> January 28, 2026</p>
+    <p><strong>Last Updated:</strong> February 19, 2026</p>
 
     <p>This Privacy Policy explains how Lifted ("we," "us," or "our") collects, uses, and protects your personal information when you use our mobile application.</p>
 
@@ -57,9 +57,9 @@
     <p>When you sign in with Apple or Google, we collect:</p>
     <ul>
         <li>Email address</li>
-        <li>Full name</li>
+        <li>Full name (display name)</li>
         <li>Profile picture (optional)</li>
-        <li>Unique user identifier</li>
+        <li>Unique user identifier (Apple User ID or Google User ID)</li>
     </ul>
 
     <h3>Fitness and Activity Data</h3>
@@ -67,9 +67,20 @@
         <li>Workout routines you create</li>
         <li>Exercise logs (exercises, sets, reps, weights)</li>
         <li>Workout history and personal records</li>
+        <li>Supplement tracking data (supplements, dosages, timing)</li>
         <li>Check-in photos and timestamps</li>
         <li>Daily prompts completed</li>
         <li>Streak and level progress</li>
+        <li>Group character level and progression</li>
+    </ul>
+
+    <h3>User-Generated Content</h3>
+    <ul>
+        <li>Check-in photos taken with your device camera</li>
+        <li>Workout posts shared to your group feed</li>
+        <li>Comments on posts</li>
+        <li>Reactions to posts</li>
+        <li>Profile pictures (if you choose to upload from photo library)</li>
     </ul>
 
     <h3>Group Data</h3>
@@ -79,21 +90,44 @@
         <li>Group member information</li>
         <li>Shared workouts and check-ins</li>
         <li>Group activity and interactions</li>
+        <li>Comments and reactions within groups</li>
     </ul>
 
-    <h3>Device Information</h3>
+    <h3>Purchase Information</h3>
     <ul>
-        <li>Device type and operating system</li>
+        <li>Subscription status (Lifted Revive monthly or yearly)</li>
+        <li>Purchase history and subscription renewal dates</li>
+        <li>Character revive usage tracking</li>
+    </ul>
+    <p><strong>Note:</strong> We do not collect payment card information. All payments are processed securely by Apple through the App Store, and we only receive confirmation of successful purchases.</p>
+
+    <h3>Device and Usage Information</h3>
+    <ul>
+        <li>Device type and operating system version</li>
         <li>App version</li>
-        <li>Crash reports and error logs</li>
-        <li>Usage analytics (optional)</li>
+        <li>Crash reports and error logs (anonymous)</li>
+        <li>Performance data (app load times, feature usage)</li>
+        <li>Usage analytics showing which features you use and how often</li>
     </ul>
 
-    <h3>Photos and Camera</h3>
+    <h2>Permissions We Request</h2>
+
+    <h3>Camera Access</h3>
+    <p>We request access to your device camera to enable daily check-in photos. Camera access is only used when you actively tap the check-in button. We never access your camera in the background or without your knowledge. You can deny camera access, but this will prevent you from completing check-ins.</p>
+
+    <h3>Photo Library Access (Optional)</h3>
+    <p>We request optional access to your photo library to allow you to choose a profile picture. This permission is not required for core app functionality. If you deny this permission, you can still use all other features of the app.</p>
+
+    <h3>Push Notifications</h3>
+    <p>We request permission to send you push notifications for:</p>
     <ul>
-        <li>Check-in photos taken within the app</li>
-        <li>Photos are stored on our servers and visible to your group members</li>
+        <li>Daily check-in reminders</li>
+        <li>Group activity alerts (when members post or comment)</li>
+        <li>Workout reminders</li>
+        <li>Group character level-up celebrations</li>
+        <li>Important account or subscription updates</li>
     </ul>
+    <p>You can customize or disable notifications at any time in your device settings or within the app.</p>
 
     <h2>How We Use Your Information</h2>
     <p>We use your information to:</p>
@@ -102,35 +136,55 @@
         <li>Enable workout tracking and progress monitoring</li>
         <li>Facilitate group accountability features</li>
         <li>Display check-in photos to group members</li>
+        <li>Process and manage your subscription to Lifted Revive</li>
+        <li>Track character revive usage (one per month for subscribers)</li>
         <li>Send notifications about group activity and reminders</li>
+        <li>Enable commenting and social interaction features</li>
         <li>Provide customer support</li>
-        <li>Analyze app usage to improve features</li>
-        <li>Prevent fraud and enforce our Terms of Service</li>
+        <li>Analyze app usage to improve features and performance</li>
+        <li>Prevent fraud, abuse, and enforce our Terms of Service and Community Guidelines</li>
+        <li>Moderate user-generated content and respond to reports</li>
     </ul>
 
     <h2>Data Sharing and Disclosure</h2>
 
     <h3>Within Groups</h3>
-    <p>Check-in photos, workout logs, and activity are visible to all members of your groups. This is essential to the app's accountability features.</p>
+    <p>Check-in photos, workout logs, comments, reactions, and activity are visible to all members of your groups. This is essential to the app's accountability features. When you join a group, you consent to sharing this information with all current and future members of that group.</p>
+
+    <h3>User-Generated Content</h3>
+    <p>Content you create (check-in photos, workout posts, comments) is visible to your group members. Other users can report inappropriate content, and we may review reported content for moderation purposes.</p>
 
     <h3>Third-Party Services</h3>
     <p>We use third-party services for:</p>
     <ul>
         <li>Authentication (Apple Sign In, Google Sign In)</li>
-        <li>Cloud storage and database hosting</li>
-        <li>Analytics (optional and anonymized)</li>
+        <li>Cloud storage and database hosting (Replit, Neon)</li>
+        <li>Subscription management (Superwall, Apple App Store)</li>
+        <li>Image storage and delivery</li>
+        <li>Analytics (anonymized and aggregated)</li>
+        <li>Crash reporting and performance monitoring</li>
     </ul>
-    <p>We do not sell your personal information to third parties.</p>
+    <p>These third-party services are contractually obligated to protect your data and use it only for the purposes we specify. We do not sell your personal information to third parties for marketing or advertising purposes.</p>
 
     <h3>Legal Requirements</h3>
-    <p>We may disclose your information if required by law, court order, or to protect our rights and users' safety.</p>
+    <p>We may disclose your information if required by law, court order, subpoena, or to:</p>
+    <ul>
+        <li>Comply with legal processes</li>
+        <li>Protect our rights and property</li>
+        <li>Protect users' safety</li>
+        <li>Prevent fraud or abuse</li>
+        <li>Respond to government requests</li>
+    </ul>
 
     <h2>Data Storage and Security</h2>
     <ul>
         <li>Your data is stored securely on encrypted servers</li>
+        <li>We use industry-standard encryption for data transmission (HTTPS/TLS)</li>
         <li>Check-in photos are stored for the duration of your group participation</li>
-        <li>Workout data is stored indefinitely unless you delete your account</li>
-        <li>We implement industry-standard security measures, but no system is 100% secure</li>
+        <li>Workout data and history are stored indefinitely unless you delete your account</li>
+        <li>We implement access controls to limit who can view your data</li>
+        <li>We regularly review and update our security practices</li>
+        <li>However, no system is 100% secure, and we cannot guarantee absolute security</li>
     </ul>
 
     <h2>Your Rights and Choices</h2>
@@ -139,36 +193,73 @@
         <li>Access your personal data through the app</li>
         <li>Edit your profile information and display name</li>
         <li>Delete your account and all associated data</li>
-        <li>Request a copy of your data by contacting us</li>
-        <li>Opt out of promotional notifications</li>
+        <li>Request a copy of your data by contacting us at liftedappios@gmail.com</li>
+        <li>Opt out of promotional notifications (in app settings)</li>
         <li>Leave groups and stop sharing data with those members</li>
+        <li>Block other users to prevent them from seeing your content</li>
+        <li>Report inappropriate content for moderation review</li>
+        <li>Revoke camera and photo library permissions (in device settings)</li>
+        <li>Cancel your subscription at any time (through iPhone Settings → Subscriptions)</li>
     </ul>
 
     <h2>Data Retention</h2>
     <ul>
         <li><strong>Account data:</strong> Retained while your account is active</li>
-        <li><strong>Check-in photos:</strong> Retained while you're in the associated group</li>
+        <li><strong>Check-in photos:</strong> Retained while you're in the associated group. If you leave a group, your photos remain visible to that group</li>
         <li><strong>Workout history:</strong> Retained until you delete your account</li>
-        <li><strong>Deleted accounts:</strong> Data is permanently deleted within 30 days</li>
+        <li><strong>Comments and posts:</strong> Retained until you delete them or delete your account</li>
+        <li><strong>Subscription data:</strong> Retained for accounting and legal compliance purposes</li>
+        <li><strong>Deleted accounts:</strong> All personal data is permanently deleted within 30 days of account deletion</li>
+        <li><strong>Crash and diagnostic data:</strong> Retained for up to 90 days for troubleshooting purposes</li>
     </ul>
 
     <h2>Children's Privacy</h2>
     <p>Lifted is not intended for children under 13. We do not knowingly collect information from children under 13. If we discover we have collected such information, we will delete it immediately.</p>
-    <p>Users aged 13-17 should use the app with parental guidance and consent.</p>
+    <p>Users aged 13-17 should use the app with parental guidance and consent. Parents can request deletion of their child's data by contacting us.</p>
 
     <h2>International Users</h2>
-    <p>Your information may be transferred to and processed in countries other than your own. By using Lifted, you consent to such transfers.</p>
+    <p>Your information may be transferred to and processed in the United States and other countries where our servers and service providers are located. By using Lifted, you consent to such transfers. We take steps to ensure your data receives adequate protection wherever it is processed.</p>
+
+    <h2>California Privacy Rights (CCPA)</h2>
+    <p>If you are a California resident, you have additional rights under the California Consumer Privacy Act:</p>
+    <ul>
+        <li>Right to know what personal information we collect and how we use it</li>
+        <li>Right to delete your personal information</li>
+        <li>Right to opt-out of the sale of personal information (we do not sell your information)</li>
+        <li>Right to non-discrimination for exercising your privacy rights</li>
+    </ul>
+    <p>To exercise these rights, contact us at liftedappios@gmail.com.</p>
+
+    <h2>European Privacy Rights (GDPR)</h2>
+    <p>If you are in the European Economic Area, you have rights under the General Data Protection Regulation:</p>
+    <ul>
+        <li>Right to access your personal data</li>
+        <li>Right to correct inaccurate data</li>
+        <li>Right to delete your data</li>
+        <li>Right to restrict processing</li>
+        <li>Right to data portability</li>
+        <li>Right to object to processing</li>
+    </ul>
+    <p>To exercise these rights, contact us at liftedappios@gmail.com.</p>
 
     <h2>Changes to This Policy</h2>
-    <p>We may update this Privacy Policy from time to time. We will notify you of significant changes through the app or via email. Continued use after changes constitutes acceptance.</p>
+    <p>We may update this Privacy Policy from time to time. We will notify you of significant changes through:</p>
+    <ul>
+        <li>In-app notification</li>
+        <li>Email to your registered email address</li>
+        <li>Update to the "Last Updated" date at the top of this policy</li>
+    </ul>
+    <p>Continued use of the app after changes constitutes acceptance of the updated policy. We encourage you to review this policy periodically.</p>
 
     <h2>Contact Us</h2>
-    <p>For privacy questions, data requests, or to delete your account, contact us at:</p>
+    <p>For privacy questions, data requests, to delete your account, or to exercise your privacy rights, contact us at:</p>
     <p><strong>Email:</strong> <a href="mailto:liftedappios@gmail.com">liftedappios@gmail.com</a></p>
+    <p><strong>Response time:</strong> We typically respond within 24-48 hours</p>
 
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     <p style="text-align: center; color: #888;">
-        <a href="terms.html" class="back-link">View Terms of Service</a>
+        <a href="terms.html" class="back-link">View Terms of Service</a> | 
+        <a href="support.html" class="back-link">Support Center</a>
     </p>
 </body>
 </html>
