--- a/terms.html
+++ b/terms.html
@@ -43,103 +43,177 @@
         <p><strong>Terms of Service</strong></p>
     </div>
 
-    <p><strong>Last Updated:</strong> January 28, 2026</p>
+    <p><strong>Last Updated:</strong> February 19, 2026</p>
 
     <p>Welcome to Lifted, an app designed to help users achieve their fitness goals through group accountability, workout tracking, and social fitness challenges. By accessing or using Lifted, you agree to the following Terms of Service (the "Terms"). These Terms explain your rights, responsibilities, and our limitations of liability. Please read them carefully before using the app.</p>
 
     <h2>1. Acceptance of Terms</h2>
     <p>By downloading, installing, or using Lifted, you agree to be bound by these Terms. If you do not agree, you must stop using the app immediately.</p>
-    <p>You must be at least 13 years old or the legal age of majority in your jurisdiction to use Lifted. Users under 18 should use the app with parental guidance.</p>
+    <p>You must be at least 13 years old or the legal age of majority in your jurisdiction to use Lifted. Users under 18 should use the app with parental guidance and consent.</p>
 
     <h2>2. General Disclaimer</h2>
     <p><strong>No Medical or Professional Advice:</strong><br>
-    Lifted is a fitness tracking and accountability tool. The app's features—including workout routines, exercise suggestions, and fitness tracking—are not substitutes for professional medical, fitness, or health advice. Always consult qualified healthcare or fitness professionals before starting any exercise program.</p>
+    Lifted is a fitness tracking and accountability tool. The app's features—including workout routines, exercise suggestions, supplement tracking, and fitness tracking—are not substitutes for professional medical, fitness, nutritional, or health advice. Always consult qualified healthcare or fitness professionals before starting any exercise program or making changes to your diet or supplement regimen.</p>
 
     <p><strong>Exercise Database Limitations:</strong><br>
     Lifted's exercise database provides general information and instructions. However, results may not always be accurate, complete, or suitable for your individual needs. You agree that you use these tools at your own discretion and risk.</p>
 
     <p><strong>Educational and Motivational Purposes:</strong><br>
-    All workout routines, exercise instructions, and fitness content are designed to support your fitness journey. They are not guarantees of specific results or protection from injury.</p>
+    All workout routines, exercise instructions, supplement tracking features, and fitness content are designed to support your fitness journey. They are not guarantees of specific results or protection from injury.</p>
 
     <h2>3. User Responsibilities and Risks</h2>
     <p><strong>Use at Your Own Risk:</strong><br>
     You understand and accept that using Lifted involves certain risks, including but not limited to physical injury, incorrect exercise form, or reliance on user-generated workout content. Lifted disclaims all liability for injuries or damages resulting from your use of the app or participation in fitness activities.</p>
 
     <p><strong>Accuracy of Information:</strong><br>
-    While Lifted strives to provide accurate exercise information and instructions, we cannot guarantee that all content is free from errors or omissions. You are solely responsible for using proper form, appropriate weights, and safe exercise practices.</p>
+    While Lifted strives to provide accurate exercise information and instructions, we cannot guarantee that all content is free from errors or omissions. You are solely responsible for using proper form, appropriate weights, safe exercise practices, and making informed decisions about your fitness and supplement regimen.</p>
 
     <p><strong>Health and Safety:</strong><br>
     You are responsible for ensuring you are physically capable of performing exercises. Stop exercising immediately if you experience pain, dizziness, or discomfort, and consult a healthcare professional.</p>
 
     <p><strong>Community Conduct:</strong><br>
-    Users are expected to engage respectfully within Lifted's group features and social spaces. Harassment, inappropriate content, or misuse of check-in features is strictly prohibited and may result in account suspension or removal.</p>
+    Users are expected to engage respectfully within Lifted's group features, social feed, and comment sections. Harassment, inappropriate content, hate speech, explicit imagery, spam, or misuse of check-in features is strictly prohibited and may result in account suspension or permanent removal. See our Community Guidelines for full details.</p>
 
     <h2>4. Limitation of Liability</h2>
     <p>To the fullest extent permitted by law, Lifted and its developers, employees, affiliates, and partners disclaim all liability for any damages arising from your use of the app, including but not limited to:</p>
     <ul>
-        <li><strong>Direct or Indirect Damages:</strong> Including physical injury, health complications, or personal harm resulting from exercise activities.</li>
-        <li><strong>Incidental or Consequential Damages:</strong> Including data loss, device malfunction, or account suspension.</li>
+        <li><strong>Direct or Indirect Damages:</strong> Including physical injury, health complications, or personal harm resulting from exercise activities or following fitness/nutrition information from the app.</li>
+        <li><strong>Incidental or Consequential Damages:</strong> Including data loss, device malfunction, account suspension, or loss of subscription benefits.</li>
         <li><strong>Exercise Information Accuracy:</strong> The app's exercise database and instructions are provided "as-is" and without guarantees of accuracy or suitability for your individual needs.</li>
+        <li><strong>User-Generated Content:</strong> We are not responsible for content posted by other users, including check-in photos, workout posts, or comments.</li>
     </ul>
-    <p>In no event shall Lifted's total liability exceed the amount paid by you for using the app, or $10, whichever is greater.</p>
+    <p>In no event shall Lifted's total liability exceed the amount paid by you for using the app in the past 12 months, or $10, whichever is greater.</p>
 
     <h2>5. Privacy and Data Security</h2>
     <p><strong>Data Collection and Use:</strong><br>
-    Lifted collects and stores user data to enable app features such as workout tracking, group accountability, check-in photos, and social interactions. See our <a href="privacy.html">Privacy Policy</a> for details.</p>
+    Lifted collects and stores user data to enable app features such as workout tracking, group accountability, check-in photos, comments, and social interactions. See our <a href="privacy.html">Privacy Policy</a> for complete details.</p>
 
     <p><strong>No Unauthorized Sharing:</strong><br>
-    Lifted will not sell or share user data with third parties without explicit consent, except as required by law.</p>
+    Lifted will not sell or share user data with third parties for marketing purposes without explicit consent, except as required by law or as described in our Privacy Policy.</p>
 
     <p><strong>Group Visibility:</strong><br>
-    Check-in photos, workout logs, and activity shared within groups are visible to all group members. By joining a group, you consent to this visibility.</p>
+    Check-in photos, workout logs, comments, reactions, and activity shared within groups are visible to all group members. By joining a group, you consent to this visibility and understand that other members can see your content.</p>
 
     <h2>6. User-Generated Content and Interactions</h2>
     <p><strong>Prohibited Content:</strong><br>
-    You may not share or upload harmful, offensive, or inappropriate content. This includes harassment, explicit imagery, or content that violates others' rights.</p>
+    You may not share or upload harmful, offensive, or inappropriate content. This includes but is not limited to: harassment, bullying, hate speech, explicit imagery, nudity, violence, spam, promotional content, or content that violates others' rights. Violation of these rules will result in content removal and may result in account termination.</p>
 
     <p><strong>Check-In Photos:</strong><br>
-    Check-in photos must follow daily prompts and be appropriate for a fitness context. Misuse of the check-in feature (fake photos, inappropriate content) may result in account suspension.</p>
+    Check-in photos must follow daily prompts and be appropriate for a fitness context. Misuse of the check-in feature (fake photos, inappropriate content, photos unrelated to fitness) may result in content removal, warnings, or account suspension.</p>
+
+    <p><strong>Comments and Social Features:</strong><br>
+    Comments must be respectful and fitness-related. Do not post spam, harassment, or off-topic content. Users can report inappropriate comments, and repeated violations will result in account suspension.</p>
 
     <p><strong>License to User Content:</strong><br>
-    By posting or submitting content (e.g., check-in photos, workout logs), you grant Lifted a non-exclusive, royalty-free, worldwide license to use, display, and distribute that content as necessary to operate the app.</p>
+    By posting or submitting content (e.g., check-in photos, workout logs, comments, reactions), you grant Lifted a non-exclusive, royalty-free, worldwide license to use, display, reproduce, and distribute that content as necessary to operate the app and its social features.</p>
 
-    <h2>7. Premium Features and In-App Purchases</h2>
+    <p><strong>Content Moderation:</strong><br>
+    We reserve the right to review, moderate, and remove any user-generated content that violates these Terms or our Community Guidelines. Reported content will be reviewed within 24 hours. Users who repeatedly violate our policies will be permanently banned.</p>
+
+    <h2>7. Premium Features and Subscriptions</h2>
     <p><strong>Subscription Services:</strong><br>
-    Lifted may offer premium features through in-app purchases or subscriptions. Payment will be charged to your Apple ID account upon confirmation of purchase.</p>
+    Lifted offers premium features through auto-renewable subscriptions ("Lifted Revive"). Current subscription options:</p>
+    <ul>
+        <li>Lifted Revive Monthly: $4.99 per month</li>
+        <li>Lifted Revive Yearly: $49.99 per year</li>
+    </ul>
+    <p>Payment will be charged to your Apple ID account upon confirmation of purchase.</p>
+
+    <p><strong>Subscription Benefits:</strong><br>
+    Lifted Revive subscribers receive:</p>
+    <ul>
+        <li>One character revive per month (to restore group character after missing a check-in)</li>
+        <li>Custom profile frames and backgrounds</li>
+        <li>Exclusive character skins</li>
+        <li>Custom post reactions</li>
+    </ul>
+
+    <p><strong>Character Revive Usage:</strong><br>
+    Subscribers receive one character revive per calendar month. Revives do not roll over to subsequent months. Revive can be used preemptively or after a group reset, but only once per month.</p>
 
     <p><strong>Auto-Renewal:</strong><br>
-    Subscriptions automatically renew unless canceled at least 24 hours before the end of the current period.</p>
+    Subscriptions automatically renew unless canceled at least 24 hours before the end of the current billing period. Your Apple ID account will be charged for renewal within 24 hours prior to the end of the current period.</p>
 
     <p><strong>Cancellation:</strong><br>
-    You may cancel subscriptions through your Apple ID account settings at any time.</p>
+    You may cancel subscriptions at any time through your Apple ID account settings (iPhone Settings → Your Name → Subscriptions). Cancellation takes effect at the end of the current billing period. No refunds will be provided for the unused portion of any subscription period.</p>
+
+    <p><strong>Restore Purchases:</strong><br>
+    You can restore previous purchases through the app's paywall screen or in Settings. This is useful when reinstalling the app or switching devices.</p>
+
+    <p><strong>Free Trial (if offered):</strong><br>
+    If a free trial is offered, you will be charged the subscription price at the end of the trial period unless you cancel before the trial ends.</p>
 
     <h2>8. Changes to Terms and Services</h2>
-    <p>Lifted reserves the right to modify these Terms or update the app's features at any time. Significant changes will be communicated through the app or via email. Continued use of Lifted after such changes constitutes acceptance of the new Terms.</p>
+    <p>Lifted reserves the right to modify these Terms, update subscription pricing, or change app features at any time. Significant changes will be communicated through:</p>
+    <ul>
+        <li>In-app notification</li>
+        <li>Email to your registered email address</li>
+        <li>Update to the "Last Updated" date at the top of this page</li>
+    </ul>
+    <p>Continued use of Lifted after such changes constitutes acceptance of the new Terms. If you do not agree to the changes, you must stop using the app and cancel any active subscriptions.</p>
 
     <h2>9. Indemnification</h2>
-    <p>You agree to indemnify and hold harmless Lifted, its developers, affiliates, and employees from any claims, damages, or expenses arising from your use of the app, violation of these Terms, injuries sustained during exercise, or infringement of third-party rights.</p>
+    <p>You agree to indemnify, defend, and hold harmless Lifted, its developers, affiliates, employees, and partners from any claims, damages, losses, liabilities, and expenses (including reasonable attorneys' fees) arising from:</p>
+    <ul>
+        <li>Your use of the app</li>
+        <li>Your violation of these Terms or Community Guidelines</li>
+        <li>Injuries sustained during exercise or fitness activities</li>
+        <li>Your user-generated content</li>
+        <li>Infringement of third-party rights</li>
+        <li>Your interactions with other users</li>
+    </ul>
 
     <h2>10. Governing Law and Jurisdiction</h2>
-    <p>These Terms are governed by the laws of the United States. Any disputes will be resolved exclusively by the courts within this jurisdiction.</p>
+    <p>These Terms are governed by the laws of the United States, without regard to conflict of law principles. Any disputes will be resolved exclusively in the courts located in the United States. You consent to the jurisdiction of such courts and waive any objections to venue.</p>
 
     <h2>11. Disclaimer of Warranty</h2>
-    <p>Lifted is provided on an "as-is" and "as-available" basis. We make no representations or warranties regarding the accuracy, reliability, or availability of the app or its exercise content. You use Lifted entirely at your own risk.</p>
+    <p>Lifted is provided on an "as-is" and "as-available" basis without warranties of any kind, either express or implied. We make no representations or warranties regarding:</p>
+    <ul>
+        <li>The accuracy, reliability, or completeness of app content</li>
+        <li>The availability or uptime of the app</li>
+        <li>The fitness or suitability of exercises for your individual needs</li>
+        <li>The accuracy of user-generated content</li>
+        <li>The results you may achieve from using the app</li>
+    </ul>
+    <p>You use Lifted entirely at your own risk.</p>
 
     <h2>12. Assumption of Risk</h2>
-    <p>By using Lifted, you acknowledge that physical exercise involves inherent risks, including but not limited to muscle strains, sprains, fractures, cardiovascular stress, and other injuries. You voluntarily assume all risks associated with using the app and participating in fitness activities.</p>
+    <p>By using Lifted, you acknowledge and accept that:</p>
+    <ul>
+        <li>Physical exercise involves inherent risks, including but not limited to muscle strains, sprains, fractures, cardiovascular stress, and other injuries</li>
+        <li>You voluntarily assume all risks associated with using the app and participating in fitness activities</li>
+        <li>You are solely responsible for ensuring you are physically capable of performing exercises</li>
+        <li>We are not liable for any injuries, damages, or health complications that may result from your use of the app</li>
+    </ul>
 
-    <h2>13. Termination</h2>
-    <p>Lifted reserves the right to suspend or terminate your access at any time, without notice, for any violation of these Terms, misuse of app features, or other conduct deemed inappropriate.</p>
+    <h2>13. Account Termination</h2>
+    <p>Lifted reserves the right to suspend or terminate your access at any time, with or without notice, for:</p>
+    <ul>
+        <li>Violation of these Terms or Community Guidelines</li>
+        <li>Misuse of app features (fake check-ins, inappropriate content)</li>
+        <li>Harassment or abuse of other users</li>
+        <li>Fraudulent activity or payment issues</li>
+        <li>Any conduct deemed inappropriate or harmful to the community</li>
+    </ul>
+    <p>Upon termination, your access to premium features will be revoked immediately. You may request deletion of your account and data by contacting us at liftedappios@gmail.com.</p>
 
-    <h2>14. Contact Information</h2>
+    <h2>14. Severability</h2>
+    <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will continue in full force and effect.</p>
+
+    <h2>15. Entire Agreement</h2>
+    <p>These Terms, together with our Privacy Policy and Community Guidelines, constitute the entire agreement between you and Lifted regarding use of the app.</p>
+
+    <h2>16. Contact Information</h2>
     <p>If you have questions or need assistance regarding these Terms, please contact us at:</p>
     <p><strong>Email:</strong> <a href="mailto:liftedappios@gmail.com">liftedappios@gmail.com</a></p>
+    <p><strong>Response time:</strong> Within 24-48 hours</p>
 
     <p style="margin-top: 40px;"><em>By using Lifted, you confirm that you have read, understood, and agreed to these Terms of Service.</em></p>
 
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     <p style="text-align: center; color: #888;">
-        <a href="privacy.html" class="back-link">View Privacy Policy</a>
+        <a href="privacy.html" class="back-link">View Privacy Policy</a> | 
+        <a href="support.html" class="back-link">Support Center</a>
     </p>
 </body>
 </html>
